# EveryThingMD

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
dir2md/: README.md  __init__.py  dir2md.py  dir2md_dual.py  py.typed  run_dual_conversion.py
examples/: README.md  advanced_usage.py  basic_usage.py
tests/: __init__.py  conftest.py  test_dual_converter.py  test_quality_evaluator.py
